--- a/package.json
+++ b/package.json
@@ -5,7 +5,8 @@
   "main": "index.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "api": "nodemon api/src/index.js"
+    "api": "nodemon api/src/index.js",
+    "start": "node api/src/index.js"
   },
   "keywords": [],
   "author": "",
